<resources>
    <string name="app_name">智慧校园</string>
    <!-- Strings related to login -->
    <string name="welcome">欢迎登录</string>
    <string name="id">学号</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="todo">TODO</string>
    <string name="changePassWord">更改密码</string>
    <string name="submitFeedback">提交反馈</string>
    <string name="exit">退出登录</string>
    <string name="repair">报修</string>
    <string name="message">消息</string>
    <string name="dynamic">动态</string>
    <string name="mine">我的</string>
    <string name="announcement">新闻公告</string>
    <string name="wantRepair">我要报修</string>
    <string name="waitRepair">等待维修</string>
    <string name="repairRecord">维修记录</string>
    <string name="repairDetails">维修详情</string>
    <string name="repairSchedule">维修进度</string>
    <string name="scanCode_Repair">扫码报修</string>
    <string name="repair_space">报修区域</string>
    <string name="choose_repair_space">请选择报修区域</string>
    <string name="submit">提交</string>
    <string name="repair_address">报修地址</string>
    <string name="repair_project">报修项目</string>
    <string name="phone">手机号码</string>
    <string name="repair_image">报修图片</string>
    <string name="reserve_date">预约日期</string>
    <string name="reserve_time">预约时间段</string>
    <string name="repair_content">报修内容</string>
    <string name="input_repair_address">请选择或填写报修详细地址</string>
    <string name="choose_repair_project">请选择报修项目</string>
    <string name="choose_reserve_date">请选择预约日期</string>
    <string name="choose_reserve_time">请选择预约时间段</string>
    <string name="input_repair_content">请详尽填写报修内容，长度为2–50字</string>
    <string name="comment_hint">评论长度为2–50字</string>
    <string name="album_selection">相册选取</string>
    <string name="photograph">拍照</string>
    <string name="empty_info">暂无数据</string>
    <string name="repair_feedback">维修评价</string>
    <string name="go_appraise">去评价</string>
    <string-array name="time_array">
        <item>08:00–10:00</item>
        <item>10:00–12:00</item>
        <item>12:00–14:00</item>
        <item>14:00–16:00</item>
        <item>16:00–18:00</item>
    </string-array>
    <string name="authorities">com.hhs.campus.dialog</string>
    <string name="determine">确定</string>
    <string name="cancel">取消</string>
    <string name="send_dynamic">发动态</string>
    <string name="dynamic_hint">分享新鲜事…</string>
    <string name="complete">完成</string>
    <string name="maintain_time">报修时间</string>
    <string name="maintain_status">报修状态</string>
    <string name="magic_student_id">学号</string>
    <string name="magis_password">密码</string>
    <string name="registered">注册</string>
    <string name="accept">管理员%1$s已受理此维修订单</string>
    <string name="dispatch">管理员指派维修工%1$s承修，维修工联系电话：%2$s</string>
    <string name="sign">%1$s签到，维修工联系电话：%2$s</string>
    <string name="completed">维修工%1$s维修完工</string>
    <string name="evaluated">用户%1$s给出了评价，评价结果为%2$s分"</string>
    <string name="net_change">网络不给力，请检查网络设置</string>
</resources>