<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.hhs.campus.viewModel.RepairViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusableInTouchMode="true"
        tools:context=".activity.WantRepairActivity">

        <ImageView
            loadSpecialRepair="@{viewModel.repairLiveData}"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/todo"
            android:scaleType="centerInside"
            app:layout_constraintBottom_toBottomOf="@id/guideline38"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:gravity="center"
            android:textSize="@dimen/mainTextSize"
            android:text="@string/maintain_time"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="@id/guideline54"
            app:layout_constraintEnd_toEndOf="@id/guideline60"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/guideline38" />

        <TextView
            android:text="@{viewModel.repairLiveData.date}"
            android:gravity="center_vertical"
            android:textSize="@dimen/mainTextSize"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="@id/guideline54"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/guideline60"
            app:layout_constraintTop_toTopOf="@id/guideline38" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline38"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.3" />

        <TextView
            android:gravity="center"
            android:textSize="@dimen/mainTextSize"
            android:text="@string/maintain_status"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="@id/guideline55"
            app:layout_constraintEnd_toEndOf="@id/guideline60"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/guideline54" />

        <TextView
            android:text="@{viewModel.repairLiveData.schedule}"
            android:gravity="center_vertical"
            android:textSize="@dimen/mainTextSize"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="@id/guideline55"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/guideline60"
            app:layout_constraintTop_toTopOf="@id/guideline54" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline54"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.4" />

        <TextView
            android:gravity="center"
            android:textSize="@dimen/mainTextSize"
            android:text="@string/repair_project"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="@id/guideline56"
            app:layout_constraintEnd_toEndOf="@id/guideline60"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/guideline55" />

        <TextView
            android:text="@{viewModel.repairLiveData.repairProject}"
            android:gravity="center_vertical"
            android:textSize="@dimen/mainTextSize"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="@id/guideline56"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/guideline60"
            app:layout_constraintTop_toTopOf="@id/guideline55" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline55"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5" />

        <TextView
            android:gravity="center"
            android:textSize="@dimen/mainTextSize"
            android:text="@string/reserve_date"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="@id/guideline57"
            app:layout_constraintEnd_toEndOf="@id/guideline60"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/guideline56" />

        <TextView
            android:text="@{viewModel.repairLiveData.time}"
            android:gravity="center_vertical"
            android:textSize="@dimen/mainTextSize"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="@id/guideline57"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/guideline60"
            app:layout_constraintTop_toTopOf="@id/guideline56" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline56"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.6" />

        <TextView
            android:gravity="center"
            android:textSize="@dimen/mainTextSize"
            android:text="@string/repair_content"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="@id/guideline58"
            app:layout_constraintEnd_toEndOf="@id/guideline60"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/guideline57" />

        <TextView
            android:text="@{viewModel.repairLiveData.content}"
            android:gravity="center_vertical"
            android:textSize="@dimen/mainTextSize"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="@id/guideline58"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/guideline60"
            app:layout_constraintTop_toTopOf="@id/guideline57" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline57"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.7" />

        <TextView
            android:gravity="center"
            android:textSize="@dimen/mainTextSize"
            android:text="@string/repair_address"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="@id/guideline59"
            app:layout_constraintEnd_toEndOf="@id/guideline60"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/guideline58" />

        <TextView
            android:text="@{viewModel.repairLiveData.repairArea}"
            android:gravity="center_vertical"
            android:textSize="@dimen/mainTextSize"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="@id/guideline59"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/guideline60"
            app:layout_constraintTop_toTopOf="@id/guideline58" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline58"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.8" />

        <TextView
            android:gravity="center"
            android:textSize="@dimen/mainTextSize"
            android:text="@string/phone"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guideline60"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/guideline59" />

        <TextView
            android:text="@{viewModel.repairLiveData.phone}"
            android:gravity="center_vertical"
            android:textSize="@dimen/mainTextSize"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/guideline60"
            app:layout_constraintTop_toTopOf="@id/guideline59" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline59"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.9" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline60"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.4" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>